--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,58 +126,7 @@ jobs:
             -{{ checksum "poetry.lock.sha256" }}
       - store_artifacts:
           path: htmlcov/
-  docs:
-    executor: python-executor
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - >-
-              docs-cache
-              -v<< pipeline.parameters.cache-version >>
-              -{{ checksum "poetry.lock" }}
-            - >-
-              coverage-poetry-hash-cache
-              -v<< pipeline.parameters.cache-version >>
-              -{{ checksum "poetry.lock.sha256" }}
-      - python/install-packages:
-          pkg-manager: poetry
-      - save_cache:
-          paths:
-            - << pipeline.parameters.nox-envs-path >>
-            - << pipeline.parameters.venv-path >>
-          key: >-
-            docs-cache
-            -v<< pipeline.parameters.cache-version >>
-            -{{ checksum "poetry.lock" }}
-      - run:
-          name: Run
-          command: poetry run nox -s docs xdoctest
-      - store_artifacts:
-          path: docs/_build
-      - save_cache:
-          paths:
-            - << pipeline.parameters.poetry-hash-path >>
-          key: >-
-            coverage-poetry-hash-cache
-            -v<< pipeline.parameters.cache-version >>
-            -{{ checksum "poetry.lock.sha256" }}
-  Lint:
-    executor: ubuntu-executor
-    steps:
-      - checkout
-      - run:
-          name: Set .env
-          command: cp .env.example .env
-      - run:
-          name: Build image
-          command: docker compose build
-      - run:
-          name: Run
-          command: >-
-            docker compose run app bash -ic
-            "sudo chown -R vscode:vscode . && poetry run pre-commit run -a"
-  Nox:
+  Docs:
     executor: ubuntu-executor
     steps:
       - checkout
@@ -194,7 +143,21 @@ jobs:
             "sudo chown -R vscode:vscode . && poetry run nox --session docs"
       - store_artifacts:
           path: docs/_build
-
+  Lint:
+    executor: ubuntu-executor
+    steps:
+      - checkout
+      - run:
+          name: Set .env
+          command: cp .env.example .env
+      - run:
+          name: Build image
+          command: docker compose build
+      - run:
+          name: Run
+          command: >-
+            docker compose run app bash -ic
+            "sudo chown -R vscode:vscode . && poetry run pre-commit run -a"
   security:
     docker:
       - image: cimg/python:<< pipeline.parameters.image-tag >>
@@ -281,13 +244,10 @@ workflows:
             - context
           requires:
             - test
-      - docs:
+      - Docs:
           context:
             - context
       - Lint:
-          context:
-            - context
-      - Nox:
           context:
             - context
       - security:
