--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,6 +158,21 @@ jobs:
           command: >-
             docker compose run app bash -ic
             "sudo chown -R vscode:vscode . && poetry run pre-commit run -a"
+  Security:
+    executor: ubuntu-executor
+    steps:
+      - checkout
+      - run:
+          name: Set .env
+          command: cp .env.example .env
+      - run:
+          name: Build image
+          command: docker compose build
+      - run:
+          name: Run
+          command: >-
+            docker compose run app bash -ic
+            "sudo chown -R vscode:vscode . && poetry run nox safety -i 51668 -i 51457"
   security:
     docker:
       - image: cimg/python:<< pipeline.parameters.image-tag >>
@@ -251,6 +266,9 @@ workflows:
           context:
             - context
       - security:
+          context:
+            - context
+      - Security:
           context:
             - context
       - typing:
