--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,6 +174,26 @@ jobs:
             docker compose run app bash -ic
             "sudo chown -R vscode:vscode . 
             && poetry run nox -- -s safety -- -i 51668 -i 51457"
+  Typing:
+    executor: ubuntu-executor
+    parallelism: 4
+    steps:
+      - checkout
+      - run:
+          name: Set .env
+          command: cp .env.example .env
+      - run:
+          name: Build image
+          command: docker compose build
+      - run:
+          name: Run
+          command: >-
+            docker compose run app bash -ic
+            "sudo chown -R vscode:vscode . && 
+            set -e
+            TEST_FILES=$(circleci tests glob "tests/**/test_*.py" |
+            circleci tests split --split-by=timings)
+            poetry run nox -- -s typeguard -- -v $TEST_FILES"  
   typing:
     executor: python-executor
     parallelism: 4
@@ -232,6 +252,9 @@ workflows:
           context:
             - context
       - Security:
+          context:
+            - context
+      - Typing:
           context:
             - context
       - typing:
