--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,11 +188,11 @@ jobs:
       - run:
           name: Run
           command: >-
-            docker compose run app bash -ic
-            "sudo chown -R vscode:vscode . && 
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" |
-            circleci tests split --split-by=timings)
+            circleci tests split --split-by=timings) &&
+            docker compose run --env TEST_FILES=$TEST_FILES app bash -ic
+            "sudo chown -R vscode:vscode . &&
             poetry run nox -- -s typeguard -- -v $TEST_FILES"  
   typing:
     executor: python-executor
