--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -191,6 +191,7 @@ jobs:
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" |
             circleci tests split --split-by=timings) &&
+            echo $TEST_FILES &&
             docker compose run --env TEST_FILES=$TEST_FILES app bash -ic
             "echo $TEST_FILES"  
   typing:
