--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,10 +187,7 @@ jobs:
           command: docker compose build
       - run:
           name: Run
-          command: >-
-            set -e
-            TEST_FILES=$(circleci tests glob "tests/**/test_*.py" |
-            circleci tests split --split-by=timings) 
+          command: circleci tests glob "tests/**/test_*.py" | circleci tests split --split-by=timings
       - run:
           name: Run
           command: >-
