--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -191,6 +191,7 @@ jobs:
             set -e
             TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | \
               circleci tests split --split-by=timings)
+            docker compose run --env TEST_FILES=$TEST_FILES app bash -ic "printenv"  
       - run:
           name: Run
           command: >-
@@ -198,8 +199,7 @@ jobs:
       - run:
           name: Run
           command: >-
-            docker compose run --env TEST_FILES=$TEST_FILES app bash -ic
-            "printenv"  
+            docker compose run --env TEST_FILES=$TEST_FILES app bash -ic "printenv"  
       - run:
           name: Run
           command: >-
