--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,10 +188,8 @@ jobs:
       - run:
           name: Run
           command: |
-            set -e
-            TEST_FILES="$(circleci tests glob "tests/**/test_*.py" | \
-              circleci tests split --split-by=timings)"
-            docker compose run --env TEST_FILES=$TEST_FILES app bash -ic "printenv"  
+            docker compose run --env "$(circleci tests glob "tests/**/test_*.py" | \
+              circleci tests split --split-by=timings)" app bash -ic "printenv"  
       - run:
           name: Run
           command: >-
