--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,12 +188,20 @@ jobs:
       - run:
           name: Run
           command: |
-            docker compose run --env "$(circleci tests glob "tests/**/test_*.py" | \
-              circleci tests split --split-by=timings)" app bash -ic "printenv"  
+            export TEST_FILES="$(circleci tests glob "tests/**/test_*.py" | \
+              circleci tests split --split-by=timings)" 
       - run:
           name: Run
           command: >-
             printenv
+      - run:
+          name: Run
+          command: |
+            set -e
+            TEST_FILES="$(circleci tests glob "tests/**/test_*.py" | \
+              circleci tests split --split-by=timings)"
+            docker compose run --env "$(circleci tests glob "tests/**/test_*.py" | \
+              circleci tests split --split-by=timings)" app bash -ic "printenv" 
       - run:
           name: Run
           command: >-
