--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,23 +188,8 @@ jobs:
       - run:
           name: Run
           command: |
-            export TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | \
-              circleci tests split --split-by=timings)
-            printenv
-            echo $TEST_FILES
-      - run:
-          name: Run
-          command: |
-            docker compose run --env TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | \
-              circleci tests split --split-by=timings) app bash -ic "printenv" 
-      - run:
-          name: Run
-          command: >-
-            docker compose run --env TEST_FILES=$TEST_FILES app bash -ic "printenv"  
-      - run:
-          name: Run
-          command: >-
-            "printenv"  
+            docker compose run --env TEST_FILES="$(circleci tests glob "tests/**/test_*.py" | \
+              circleci tests split --split-by=timings)" app bash -ic "printenv" 
   typing:
     executor: python-executor
     parallelism: 4
