--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,47 +188,12 @@ jobs:
       - run:
           name: Run
           command: |
-            docker compose run --env TEST_FILES="$(circleci tests glob "tests/**/test_*.py" | \
-              circleci tests split --split-by=timings)" app bash -ic "sudo chown -R vscode:vscode . && poetry run nox -- -s typeguard -- -v $TEST_FILES" 
-  typing:
-    executor: python-executor
-    parallelism: 4
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - >-
-              typing-cache
-              -v<< pipeline.parameters.cache-version >>
-              -{{ checksum "poetry.lock" }}
-            - >-
-              typing-poetry-hash-cache
-              -v<< pipeline.parameters.cache-version >>
-              -{{ checksum "poetry.lock.sha256" }}
-      - python/install-packages:
-          pkg-manager: poetry
-      - run:
-          name: Run
-          command: |
-            set -e
-            TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | \
-              circleci tests split --split-by=timings)
-            poetry run nox -- -s typeguard -- -v $TEST_FILES
-      - save_cache:
-          paths:
-            - << pipeline.parameters.nox-envs-path >>
-            - << pipeline.parameters.venv-path >>
-          key: >-
-            typing-cache
-            -v<< pipeline.parameters.cache-version >>
-            -{{ checksum "poetry.lock" }}
-      - save_cache:
-          paths:
-            - << pipeline.parameters.poetry-hash-path >>
-          key: >-
-            typing-poetry-hash-cache
-            -v<< pipeline.parameters.cache-version >>
-            -{{ checksum "poetry.lock.sha256" }}
+            docker compose run \
+              --env TEST_FILES="$(circleci tests glob "tests/**/test_*.py" | \
+                circleci tests split --split-by=timings)" \
+              app bash -ic \
+                "sudo chown -R vscode:vscode . \
+                  && poetry run nox -- -s typeguard -- -v $TEST_FILES" 
 
 workflows:
   upload-to-codecov:
@@ -251,8 +216,5 @@ workflows:
           context:
             - context
       - Typing:
-          context:
-            - context
-      - typing:
           context:
             - context
