--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,6 +158,22 @@ jobs:
           command: >-
             docker compose run app bash -ic
             "sudo chown -R vscode:vscode . && poetry run pre-commit run -a"
+  Mypy:
+    executor: ubuntu-executor
+    steps:
+      - checkout
+      - run:
+          name: Set .env
+          command: cp .env.example .env
+      - run:
+          name: Build image
+          command: docker compose build
+      - run:
+          name: Run
+          command: >-
+            docker compose run app bash -ic
+            "sudo chown -R vscode:vscode .
+            && poetry run nox -- -s mypy"
   Security:
     executor: ubuntu-executor
     steps:
@@ -174,7 +190,7 @@ jobs:
             docker compose run app bash -ic
             "sudo chown -R vscode:vscode .
             && poetry run nox -- -s safety -- -i 51668 -i 51457"
-  Typing:
+  Typeguard:
     executor: ubuntu-executor
     parallelism: 4
     steps:
@@ -214,9 +230,12 @@ workflows:
       - Lint:
           context:
             - context
+      - Mypy:
+          context:
+            - context
       - Security:
           context:
             - context
-      - Typing:
+      - Typeguard:
           context:
             - context
