--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,41 @@ jobs:
             test-poetry-hash-cache
             -v<< pipeline.parameters.cache-version >>
             -{{ checksum "poetry.lock.sha256" }}
+  Test:
+    executor: ubuntu-executor
+    parallelism: 4
+    steps:
+      - checkout
+      - run:
+          name: Set .env
+          command: cp .env.example .env
+      - run:
+          name: Build image
+          command: docker compose build
+      - run:
+          name: Run
+          command: |
+            docker compose run \
+              --env TEST_FILES="$(circleci tests glob "tests/**/test_*.py" | \
+                circleci tests split --split-by=timings)" \
+              app bash -ic \
+                "sudo chown -R vscode:vscode . \
+                  && poetry run nox -- -s tests -- -m "not e2e" --cov-fail-under=0 \
+              --cov-report xml:coverage.xml $TEST_FILES
+            mkdir -p workspace
+            cp .coverage workspace/.coverage.$CIRCLE_NODE_INDEX
+      - persist_to_workspace:
+          root: workspace
+          paths:
+            - ./*
+      - run:
+          name: Upload to codecov
+          command: |
+            curl -Os https://uploader.codecov.io/latest/linux/codecov
+            chmod +x codecov
+            ./codecov --file /home/circleci/project/coverage.xml
+      - store_test_results:
+          path: test-results
   coverage:
     executor: python-executor
     steps:
@@ -217,6 +252,9 @@ workflows:
   upload-to-codecov:
     jobs:
       - test:
+          context:
+            - context
+      - Test:
           context:
             - context
       - coverage:
