--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,61 +32,6 @@ executors:
       docker_layer_caching: true
 
 jobs:
-  test:
-    executor: python-executor
-    parallelism: 4
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - >-
-              test-cache
-              -v<< pipeline.parameters.cache-version >>
-              -{{ checksum "poetry.lock" }}
-            - >-
-              test-poetry-hash-cache
-              -v<< pipeline.parameters.cache-version >>
-              -{{ checksum "poetry.lock.sha256" }}
-      - python/install-packages:
-          pkg-manager: poetry
-      - run:
-          name: Run
-          command: |
-            set -e
-            TEST_FILES=$(circleci tests glob "tests/**/test_*.py" | \
-              circleci tests split --split-by=timings)
-            echo $TEST_FILES
-            poetry run nox -- -s tests -- -m "not e2e" --cov-fail-under=0 \
-              --cov-report xml:coverage.xml $TEST_FILES
-            mkdir -p workspace
-            cp .coverage workspace/.coverage.$CIRCLE_NODE_INDEX
-      - persist_to_workspace:
-          root: workspace
-          paths:
-            - ./*
-      - run:
-          name: Upload to codecov
-          command: |
-            curl -Os https://uploader.codecov.io/latest/linux/codecov
-            chmod +x codecov
-            ./codecov --file /home/circleci/project/coverage.xml
-      - store_test_results:
-          path: test-results
-      - save_cache:
-          paths:
-            - << pipeline.parameters.nox-envs-path >>
-            - << pipeline.parameters.venv-path >>
-          key: >-
-            test-cache
-            -v<< pipeline.parameters.cache-version >>
-            -{{ checksum "poetry.lock" }}
-      - save_cache:
-          paths:
-            - << pipeline.parameters.poetry-hash-path >>
-          key: >-
-            test-poetry-hash-cache
-            -v<< pipeline.parameters.cache-version >>
-            -{{ checksum "poetry.lock.sha256" }}
   Test:
     executor: ubuntu-executor
     parallelism: 4
@@ -122,6 +67,25 @@ jobs:
             ./codecov --file /home/circleci/project/coverage.xml
       - store_test_results:
           path: test-results
+  Coverage:
+    executor: ubuntu-executor
+    steps:
+      - checkout
+      - attach_workspace:
+          at: workspace
+      - run:
+          name: Set .env
+          command: cp .env.example .env
+      - run:
+          name: Build image
+          command: docker compose build
+      - run:
+          name: Run
+          command: >-
+            docker compose run app bash -ic
+            "sudo chown -R vscode:vscode . && poetry run nox -s coverage -- combine workspace/"
+      - store_artifacts:
+          path: htmlcov/
   coverage:
     executor: python-executor
     steps:
@@ -251,9 +215,6 @@ jobs:
 workflows:
   upload-to-codecov:
     jobs:
-      - test:
-          context:
-            - context
       - Test:
           context:
             - context
@@ -261,7 +222,7 @@ workflows:
           context:
             - context
           requires:
-            - test
+            - Test
       - Docs:
           context:
             - context
