--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,7 @@ jobs:
           name: Run
           command: >-
             docker compose run app bash -ic
-            "sudo chown -R vscode:vscode . && poetry run nox -s coverage -- combine workspace/"
+            "sudo chown -R vscode:vscode . && poetry run nox -- -s coverage -- combine workspace/"
       - store_artifacts:
           path: htmlcov/
   coverage:
