chore: yolo once
message body is to short

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -57,7 +57,7 @@
           "titleBar.activeBackground": "#FF00FF",
           "titleBar.activeForeground": "#ffffff"
         },
-        "window.title": "${localWorkspaceFolderBasename}",
+        "window.title": "${localWorkspaceFolderBasename}${separator}${activeEditorShort}",
         "yaml.format.enable": true
       }
     }
