--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ ormar = "0.12.0"
 pandas = "1.3"
 psycopg2-binary = "2.9.5"
 py = "1.11.0"
-python = "3.8.16"
+python = "^3.8.16"
 python-crontab = "2.7.0"
 python-decouple = "3.6"
 python-dotenv = "0.21.0"
