--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Felipe Restrepo <maferelo@users.noreply.github.com>"]
 [tool.poetry.dependencies]
 aiofiles = "22.1.0"
 alembic = "1.9.0"
-asyncpg = "0.25.0"
+asyncpg = "0.27.0"
 click = "8.1.3"
 desert = "2022.9.22"
 fastapi = "0.78.0"
@@ -17,13 +17,12 @@ ipykernel = "6.19.4"
 jinja2 = "3.1.2"
 markdown = "3.4.1"
 marshmallow = "3.19.0"
-numpy = "1.22.2"
+numpy = "1.23.5"
 ormar = "0.12.0"
-pandas = "1.3"
+pandas = "1.5.3"
 psycopg2-binary = "2.9.5"
 py = "1.11.0"
 python = ">=3.8.16,<3.12"
-python-crontab = "2.7.0"
 python-decouple = "3.6"
 python-dotenv = "0.21.0"
 python-multipart = "0.0.5"
@@ -33,7 +32,9 @@ scikit-learn = "0.24.2"
 sqlalchemy = "1.4.41"
 typer = "0.6.1"
 uvicorn = "0.18.3"
-tensorflow = {url = "https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-2.12.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
+tensorflow = "2.12.0"
+yfinance = "^0.2.20"
+matplotlib = "^3.7.1"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "1.7.4"
