fix: pipelines testv2 step was renamed to setup
now the flow is setup and run nox or any other step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,8 @@ jobs:
   Nox:
     executor: python
     steps:
+      - attach_workspace:
+          at: /tmp/workspace
       - run:
           name: Run Nox
           command: poetry run nox
