fix: pipelines testv2 step was renamed to setup
now the flow is setup and run nox or any other step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
     executor: python
     steps:
       - checkout
-      - run: mkdir -p workspace
+      - run: mkdir -p workspace && cd workspace
       - run:
           name: Set .env
           command: cp .env.example .env
