fix: pipelines testv2 step was renamed to setup
now the flow is setup and run nox or any other step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,8 @@ jobs:
     executor: python
     steps:
       - run: mkdir -p workspace && cd workspace
-      - checkout
+      - checkout:
+          path: workspace
       - run:
           name: Set .env
           command: cp .env.example .env
