fix: pipelines testv2 step was renamed to setup
now the flow is setup and run nox or any other step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
       - run: mkdir -p workspace && cd workspace
       - checkout:
-          path: workspace
+          path: /tmp/workspace
       - run:
           name: Set .env
           command: cp .env.example .env
