--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
       - run: mkdir -p workspace && cd workspace
       - checkout:
           path: /tmp/workspace
+      - run: pwd && ls -la
       - run:
           name: Set .env
           command: cp .env.example .env
