fix: pipelines testv2 step was renamed to setup
now the flow is setup and run nox or any other step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run: mkdir -p workspace && cd workspace
       - checkout:
           path: /tmp/workspace
-      - run: pwd && ls -la
+      - run: pwd && ls -la && cd /tmp/workspace && pwd && ls -la
       - run:
           name: Set .env
           command: cp .env.example .env
