--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,10 @@ jobs:
       - run: pwd && ls -la && cd /tmp/workspace && pwd && ls -la
       - run:
           name: Set .env
-          command: cp .env.example .env
+          command: cp /tmp/workspace.env.example /tmp/workspace.env
       - run:
           name: Install dependencies
-          command: poetry install --no-ansi
+          command: cd /tmp/workspace && poetry install --no-ansi
       - persist_to_workspace:
           root: tmp
           paths:
